# parallel-cpp-linalg

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md  matrix.cpp
Matrix/: CMakeLists.txt  Matrix  Matrix.cpp  Matrix.h  main.cpp
benchmarks/: CMakeLists.txt
include/: Dot.h  Matrix.h  Matrix_Power.h  Transpose.h  det.h  dot.h  dot_single_thread.h  eig.h  eig_singular.h  equation.h  fraction.h  inv.h  matrix.h  matrix_power.h  solve.h  solve_singular.h  split_column_single_thread.h  split_row.h  split_row_single_thread.h  thread_pool.h  trace.h  transpose.h  transpose_single_thread.h
src/: CMakeLists.txt  det.cpp  equation.cpp  fraction.cpp  inv.cpp  solve.cpp  thread_pool.cpp
src/Dot/: Dot.cpp  dot.cpp  dot_single_thread.cpp
src/Matrix/: CMakeLists.txt  Matrix.cpp
src/Matrix_Power/: Matrix_Power.cpp
src/Split/: split_column.cpp  split_column_single_thread.cpp  split_row.cpp  split_row_single_thread.cpp
src/Transpose/: Transpose.cpp  transpose.cpp  transpose_single_thread.cpp
src/det/: det.cpp
src/dot/: dot.cpp  dot_single_thread.cpp
src/eig/: eig.cpp  eig_singular.cpp
src/equation/: equation.cpp
src/inv/: inv.cpp
src/matrix/: matrix.cpp
src/matrix_power/: matrix_power.cpp
src/solve/: solve.cpp  solve_singular.cpp
src/thread_pool/: thread_pool.cpp
src/trace/: trace.cpp
src/transpose/: transpose.cpp  transpose_single_thread.cpp
tests/: CMakeLists.txt  test_dot.cpp  test_matrix.cpp  test_solve.cpp  test_split.cpp  test_test.cpp  test_transpose.cpp
